# projectomega

./: CMakeLists.txt  CONTRIBUTING.md  run.sh
src/: args.h  constants.h  file.cpp  file.h  lexer.cpp  lexer.h  main.cpp  pch.h  token.h
